[package]
name = "hyper-line"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
hyper = { version = "1.6.0", features = [ "http1", "http2", "server" ] }
http-body-util = "0.1.2"
http = "1.2.0"
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
rustls = { version = "0.23.23", features = ["tls12"] }
rustls-pemfile = "2.2.0"
log = "0.4.26"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
env_logger = "0.11.6"
linkme = "0.3"

[[example]]
name = "proxy_example"
path = "examples/proxy/proxy_example.rs"

[[example]]
name = "echo_example"
path = "examples/echo/echo_example.rs"

[[example]]
name = "tls_example"
path = "examples/tls/tls_example.rs"
